--- a/contract/package.json
+++ b/contract/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "hardhat": "^2.22.18",
+    "hardhat-abi-exporter": "^2.10.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
